detailed-configs/cv-service.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cv-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cv-service
    spec:
      containers:
      - name: cv-service
        image:  aardelean/cv-service:1.0
        ports:
        - name: cvs-port
          containerPort: 8220
---
apiVersion: v1
kind: Service
metadata:
  name: cv-service-service
  labels:
    app:  cv-backend
spec:
  ports:
  - port: 80
    name: backend-port
    targetPort: cvs-port
    protocol: TCP
  selector:
    app:  search-repository
  type: LoadBalancer
