detailed-configs/elasticsearch.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch-2
        image:  elasticsearch:2.4.6
        ports:
        - name: es-http-port
          containerPort: 9200
        - name: es-own-port
          containerPort: 9300
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  ports:
  - port: 9300
    name: es-search-port
    targetPort: es-own-port
    protocol: TCP
  - port: 9200
    name: es-http-port
    targetPort: es-http-port
    protocol: TCP
  selector:
    app:  elasticsearch
  type: NodePort
