detailed-configs/persistence-repository.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cv-repository
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cv-repository
    spec:
      containers:
      - name: cv-repository
        image: aardelean/persistence-repository:1.1
        ports:
        - name: repository-port
          containerPort: 8180
---
apiVersion: v1
kind: Service
metadata:
  name: cv-repository-service
spec:
  ports:
  - port: 80
    targetPort: repository-port
    protocol: TCP
  selector:
    app:  cv-repository
  type: NodePort
