detailed-configs/postgres.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
      - name: postgresdb
        image: postgres
        ports:
        - name: postgres-port
          containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName:  claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports:
  - port: 5432
    targetPort: postgres-port
    protocol: TCP
  selector:
    app:  postgresdb
  type: NodePort
