detailed-configs/prometheus.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-deployment
spec:
  replicas: 1 # tells deployment to run 1 pod matching the template below
  template: # crete pods using pod definition in this template
    metadata:
      labels: # these key value pairs will be attached to pods
        app: prometheus-server
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v1.2.1
        ports:
        - name: prom-port
          containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector: # exposes any pods with the following labels as a service
    app: prometheus-server
  type: NodePort
  ports:
  - port: 8010 # this Service's port (cluster-internal IP clusterIP)
    name: prom-serv-port
    targetPort: prom-port # pods expose this port
  type: NodePort
