detailed-configs/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cv-ingress
spec:
  backend:
    serviceName: cv-service-service
    servicePort: 8220
